final commit, this was suppose to happen

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                             <li>I am an open book, so ask away...</li>
                         </ul>
                         <div class = "sk">                                   
-                            <img src = "https://lh3.googleusercontent.com/AjyclXM6R3Rq0BvoRAJjg2cSer5XZ9Jt7V5PretTGZIkMTZsbX49z87u46KJIrvZrNlAbWQUFTGTEp45cBPjn0K40o0_ThBhm_ZvxvOlDKJaR_Lt48Q6kFBYYDbahisw0SKtwD6NC6Q_yADReidismQFdLwvsxOwFGJ4z8BH2b10Vl7w8c8dgyokUeesVqIXM_cE3JyPgiBr3R_nSNIq4PPnZAOzB09cMXc-s52OrvZ4WobveX8T1HnhUP302rq_He7W4RhjxTyEMNz6kFsN0zr5U400gt_zsUeP4WZ6tC1zmbDqxHhweH07OmVIjtilucdnRZ4PRGrVNnObp6RANAsA80beTJU3d9uY6tAx1HRwB4Rb3ffDY52MctKVlUl7osHMa8BDjwnhgskoM9rbyrDBMEMKNyhAGot2-HWYOufYPj5JTbJV7MhUqw1qgZgj-csiWxaeF1-OEZXZ2FGWN_svT1GMBLCICw87ZRbXaGxH2i4pSAtpJ8i6Nyc940rsBNLlXSQVwDdFQhoj-vv_N1XQDnKZ672rXvxobSwy-_drdQ9q8SJ_KpAb2AKTjlLPEMx3lf59YyD4bTXNUKxnjTPS2q_UkpFyDj5Bp9k_AnYe0DZUuLK_J-gWgny2j585Y9BRg8ckWEfCDua8IIECuwhmOHbruCXwQAQ7lsCaQrgCNDKydXlCFCP2iMEHgOxWMPwvoVrmh60n54We0a4zKnM=s903-no?authuser=0"
+                            <img src = "https://github.com/MortalAmongGods/MortalAmongGods.github.io/blob/main/Photos/kv.jpg?raw=true"
                                  alt = "Kyle and Violet - Dating" class = "pictures">
                         </div>
                     </div>                  
