--- a/legal.html
+++ b/legal.html
@@ -23,7 +23,8 @@
                 </div>
                 <div class = "content-main">  
                     <div id = "legal">                       
-                        <h2>Ask a lawyer...</h2>
+                        <h2 >Ask a lawyer...</h2>
+                        <div><div class="mapouter"><div class="gmap_canvas"><iframe width="400" height="400" id="gmap_canvas" src="https://maps.google.com/maps?q=kenyon%20dr,%20troy&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://putlocker-is.org"></a><br><style>.mapouter{position:relative;text-align:right;height:400px;width:400px;}</style><a href="https://www.embedgooglemap.net">embedgooglemap.net</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:400px;width:400px;}</style></div></div></div>
                     </div>                
                 </div>
             </div>            
